--- a/JavaCompleto2020/workspace-spring-tool-suite-4-4.8.1.RELEASE/24_JPA_Hibernate/.project
+++ b/JavaCompleto2020/workspace-spring-tool-suite-4-4.8.1.RELEASE/24_JPA_Hibernate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>24_MapeamentoObjetoRelacional_JPA_Hibernate</name>
+	<name>24_JPA_Hibernate</name>
 	<comment></comment>
 	<projects>
 	</projects>
