web services client

--- a/JavaCompleto2020/eclipse-workspace/28_WebServices_SOAP_Client/.project
+++ b/JavaCompleto2020/eclipse-workspace/28_WebServices_SOAP_Client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>28_WebServices_SOAP</name>
+	<name>28_WebServices_SOAP_Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
