--- a/JavaCompleto2020/workspace-spring-tool-suite-4-4.8.1.RELEASE/24_JPA_Hibernate/.classpath
+++ b/JavaCompleto2020/workspace-spring-tool-suite-4-4.8.1.RELEASE/24_JPA_Hibernate/.classpath
@@ -24,13 +24,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -52,6 +52,6 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/java-libs/jdbc-connectors/mysql-connector-java-5.1.49.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/java-libs/jdbc-connectors/mysql-connector-java-5.1.49.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
