--- a/JavaCompleto2020/eclipse-workspace/28_WebServices_REST_Server_FolhaTrabalho/.classpath
+++ b/JavaCompleto2020/eclipse-workspace/28_WebServices_REST_Server_FolhaTrabalho/.classpath
@@ -36,5 +36,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQLConnector"/>
+	<classpathentry kind="lib" path="C:/java-libs/jdbc-connectors/postgresql-42.2.20.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
