--- a/JavaCompleto2020/eclipse-workspace/12_Git/.project
+++ b/JavaCompleto2020/eclipse-workspace/12_Git/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>12_Git</name>
+	<name>12_EDP</name>
 	<comment></comment>
 	<projects>
 	</projects>
